--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,21 @@
     "manifest_version": 3,
     "name": "Letterboxd Streaming",
     "description": "Letterboxd Ratings embedded in streaming sites (Netflix)",
-    "version": "1.0"
+    "version": "1.0",
+    "icons": {
+      "16": "images/logo-16.png",
+      "32": "images/logo-32.png",
+      "48": "images/logo-48.png",
+      "128": "images/logo-128.png"
+    },
+    
+    "content_scripts": [
+      {
+        "js": ["scripts/content.js"],
+        "matches": [
+          "https://www.netflix.com/*"
+        ],
+        "run_at": "document_end"
+      }
+    ]
   }
