--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,10 @@
       "48": "images/logo-48.png",
       "128": "images/logo-128.png"
     },
-    
+    "web_accessible_resources": [{
+      "resources": ["images/boxd-logo-dark-trans.png"],
+      "matches": ["<all_urls>"]
+    }],
     "content_scripts": [
       {
         "js": ["scripts/content.js"],
