Update manifest to send requests

--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,8 @@
         ],
         "run_at": "document_end"
       }
+    ],
+    "host_permissions": [
+      "https://www.letterboxd.com/*"
     ]
   }
