--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,13 @@
         "run_at": "document_end"
       }
     ],
+    "background": {
+      "service_worker": "scripts/background.js"
+    },
     "host_permissions": [
-      "https://www.letterboxd.com/*"
+      "https://www.letterboxd.com/*",
+      "https://letterboxd.com/*",
+      "https://netflix.com/*",
+      "https://www.netflix.com/*"
     ]
   }
